--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bufferutil": "^4.0.3",
+    "canvas": "^2.6.1",
     "discord.js": "^12.5.1",
     "discord.js-light": "^3.5.2",
     "erlpack": "github:discord/erlpack",
