--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^12.5.1",
     "discord.js-light": "^3.5.2",
     "erlpack": "github:discord/erlpack",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.2",
     "utf-8-validate": "^5.0.4",
     "zlib-sync": "^0.1.7"
