--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "common-tags": "^1.8.0",
     "discord.js": "^12.5.1",
     "discord.js-light": "^3.5.2",
+    "file-type": "^16.2.0",
+    "get-image-colors": "^4.0.0",
     "moment": "^2.29.1",
-    "mongodb": "^3.6.2"
+    "mongodb": "^3.6.2",
+    "yiq": "^4.0.0"
   },
   "devDependencies": {
-    "utf-8-validate": "^5.0.4",
-    "zlib-sync": "^0.1.7",
+    "bufferutil": "^4.0.3",
     "erlpack": "github:discord/erlpack",
-    "bufferutil": "^4.0.3"
+    "utf-8-validate": "^5.0.4",
+    "zlib-sync": "^0.1.7"
   },
   "repository": {
     "type": "git",
