--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elisly",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Elisly her sunucuya özel olarak tasarlanan güçlendirilmiş bir Discord botudur.",
   "main": "./app.js",
   "scripts": {
@@ -9,8 +9,6 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "common-tags": "^1.8.0",
-    "discord.js": "^12.5.1",
-    "discord.js-light": "^3.5.2",
     "file-type": "^16.2.0",
     "get-image-colors": "^4.0.0",
     "moment": "^2.29.1",
@@ -19,9 +17,7 @@
   },
   "devDependencies": {
     "bufferutil": "^4.0.3",
-    "erlpack": "github:discord/erlpack",
-    "utf-8-validate": "^5.0.4",
-    "zlib-sync": "^0.1.7"
+    "utf-8-validate": "^5.0.4"
   },
   "repository": {
     "type": "git",
