--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "get-image-colors": "^4.0.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.2",
+    "node-fetch": "^2.6.1",
     "ws": "^7.4.3",
     "yiq": "^4.0.0"
   },
