--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "common-tags": "^1.8.0",
     "fast-zlib": "^2.0.0",
     "file-type": "^16.2.0",
+    "form-data": "^2.3.3",
     "get-image-colors": "^4.0.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.2",
