--- a/packages/elislycord/package.json
+++ b/packages/elislycord/package.json
@@ -2,7 +2,7 @@
   "name": "elislycord",
   "version": "1.0.0",
   "description": "Elisly tarafından kullanılan Discord API ile bağlanmayı sağlayan kütüphane",
-  "main": "./index.js",
+  "main": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/acarkh/elisly.git"
